Framework project manager